--- a/src/resources/database.properties
+++ b/src/resources/database.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-dsn=fertilizershop
-connection=jdbc:mysql://localhost:3306/fertilizer?zeroDateTimeBehavior=convertToNull
+dsn=fertilizer_shop
+connection=jdbc:mysql://localhost:3306/fertilizer_shop?zeroDateTimeBehavior=convertToNull
 host=localhost
 port=3306
